hphp/test/zend/bad/ext/posix/tests/posix_access_safemode.php
<?php
var_dump(posix_access('/tmp', POSIX_W_OK));
?>
===DONE===